gptclone/static/style.css
body {
    font-family: Arial, sans-serif;
    background-color: #f4f4f4;
    padding: 5%;
}
#chat-log {
    border-radius: 4px;
    padding: 10px;
    overflow-y: auto;
    margin-bottom: 10px;
    flex-grow: 1;
    background-color: white;
    height: calc(100vh - 300px); /* Adjust the subtracted value as needed */
}
#chat-log-2 {
    border-radius: 4px;
    padding: 10px;
    overflow-y: auto;
    margin-bottom: 10px;
    flex-grow: 1;
    background-color: white;
    height: calc(100vh - 300px); /* Adjust the subtracted value as needed */
}
.user-message, .ai-message {
    margin-bottom: 5px;
    white-space: pre-wrap; /* Preserve whitespace and line breaks */
}
.user-message {
    text-align: left;
    color: black;
}
.ai-message {
    margin-left: 20px;
    color: green;
}
#user-input {
    width: 70%;
    padding: 10px;
    border-radius: 4px;
    border: 1px solid #ccc;
}
#chat-form button {
    padding: 10px 20px;
    border: none;
    border-radius: 4px;
    background-color: #007BFF;
    color: white;
    cursor: pointer;
    width: 10%;
}
#chat-form button:hover {
    background-color: #0056b3;
}

/*
@media only screen and (max-width: 1200px) {
    #user-input, #chat-form button {
        width: 100%;
    }
    .user-message, .ai-message {
        font-size: 1.2em;
    }
    #chat-log {
        height: calc(100vh - 250px);
    }
}
*/

.flex-container {
    display: flex;
}
.flex-child {
    flex-grow: 1;
    padding: 5px;
    border: 2px black;
    margin-right: 10px; /* Add margin between children */
}
.flex-child:last-child {
  margin-right: 0; /* Remove margin for the last child */
}
.flex-button {
  flex-grow: 0; /* Prevent the button from growing */
  margin: 0 0px; /* Add margin around the button */
}

hr { border: none; border-top: 1px solid lightgray; }
nav { background: lightgray; display: flex; align-items: center; padding: 0 0.5rem; }
nav h1 { flex: auto; margin: 0; }
nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }

